bug - map covering things

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -14,7 +14,7 @@ html, body {
 }
 
 .day-of-map {
-  height: 83vh;
+  height: 73vh;
   width: 100%;
 }
 
